add user functions
remove user registration function

use DB to store user info

fix bcrypt version bug

removed registration in UI

remove wrong version of python-multipart, and which is already installed by gradio

fix logout button not working

Fix logout function

--- a/sample.env
+++ b/sample.env
@@ -1,2 +1,5 @@
 # copy this file as master.env and put your production key there
 OPENROUTERAI_API_KEY="sk..."
+
+# Secret key for JWT tokens - change this in production!
+SECRET_KEY="your-secret-key-change-this-in-production-make-it-long-and-random"
