--- a/environment.yml
+++ b/environment.yml
@@ -15,3 +15,7 @@ dependencies:
 
   - pip:
     - gradio==5.18.0
+    - python-jose[cryptography]==3.3.0
+    - passlib[bcrypt]==1.7.4
+    - bcrypt==4.0.1  # Fix for "(trapped) error reading bcrypt version"
+    - jinja2==3.1.2
